k8s/deployments/common/java-runner-service-kubernetes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: java-runner-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-runner
  sessionAffinity: None
  type: ClusterIP
